syntax = "proto3";

package wallet;

option go_package = "contract/goproto/wallet";

message CreateTransactionRequest{
  string user = 1;
  Type type = 2 ;
  float amount = 3;
  string meta=4;
}

message CreateTransactionResponse{
}

enum Type {
  DEPOSIT = 0;
  WITHDRAWAL = 1;
  IncreaseByGift = 2;
  Unknown = 3;
}
service CreateTransactionService{
  rpc CreateTransaction(CreateTransactionRequest) returns (CreateTransactionResponse);
}